--- a/package.json
+++ b/package.json
@@ -13,6 +13,27 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "@openzeppelin/contracts-upgradeable": "^4.0.0"
-  }
+    "@openzeppelin/contracts-upgradeable": "^4.0.0",
+    "build": "^0.1.4"
+  },
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, a sample script that deploys that contract, and an example of a task implementation, which simply lists the available accounts.",
+  "version": "1.0.0",
+  "main": "cloudFunction.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sylvester-dev/CryptoRNewNFTMarketplace.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sylvester-dev/CryptoRNewNFTMarketplace/issues"
+  },
+  "homepage": "https://github.com/Sylvester-dev/CryptoRNewNFTMarketplace#readme"
 }
